Create user email subscription

--- a/apps/blog/templates/blog/category/category_articles.html
+++ b/apps/blog/templates/blog/category/category_articles.html
@@ -107,9 +107,10 @@ Categories
 
                         <h4 class="title"><b>SUBSCRIBE NOW</b></h4>
                      
-                            <form>
+                            <form method="POST" action="{% url 'authentication:user_subscription' %}">
+                                {% csrf_token %}
                                 <div class="input-area">
-                                <input class="email-input" type="text" placeholder="Enter your email">
+                                <input class="email-input" name="email" type="text" placeholder="Enter your email" required>
                                  </div>
 
                                 <button class="btn  px-3 mt-2 text-white" style="background-color: #5E72E4;" type="submit">SUBSCRIBE</button>
