--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -190,6 +190,7 @@
           <a  class="nav-item nav-link" href="{% url 'authentication:logout' %}">Logout</a>
       {% else %}
           <a  class="nav-item nav-link" href="{% url 'authentication:login' %}">Login</a>
+          <a  class="nav-item nav-link" href="{% url 'authentication:register' %}">Register</a>
       {% endif %}
          
           <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-google-plus"></i></a>
