--- a/templates/layouts/base-fullscreen.html
+++ b/templates/layouts/base-fullscreen.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
+  <!-- <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon"> -->
   
   <title>
    {{title}}
