--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -65,7 +65,7 @@ Home
 
 <div class="container mb-3">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8">
       <div class="card shadow-sm bg-white">
         <div class="card-header">
           <h4 class="title">{{title}}</h4>
@@ -85,7 +85,7 @@ Home
                         <span class="time">{{ article.count_words }} word{{ article.count_words|pluralize }}</span>
                         <span class="time">{{ article.read_time }} min{{ article.read_time|pluralize }} read</span>
                         <span class="comment">{{ article.views }} view{{ article.views|pluralize }}</span>
-                        <span class="comment"><a href="#">{{ article.comments.count }} comment{{article.comments.count|pluralize }}</a></span>
+                        <!-- <span class="comment"><a href="#">{{ article.comments.count }} comment{{article.comments.count|pluralize }}</a></span> -->
                         <span class="time">
 
 
@@ -164,10 +164,50 @@ Home
         </div>
       </div>
     </div>
+    <div class="col-md-4 ">
+
+      <div class="single-post info-area bg-white">
+
+         
+
+          <div class="subscribe-area">
+
+              <h4 class="title"><b>SUBSCRIBE NOW</b></h4>
+           
+                  <form method="POST" action="{% url 'authentication:user_subscription' %}">
+                      {% csrf_token %}
+                      <div class="input-area">
+                      <input class="email-input" name="email" type="text" placeholder="Enter your email" required>
+                       </div>
+
+                      <button class="btn  px-3 mt-2 text-white" style="background-color: #5E72E4;" type="submit">SUBSCRIBE</button>
+                  </form>
+
+          </div><!-- subscribe-area -->
+          <!-- <div class="about-area">
+              <h4 class="title"><b>ABOUT ME</b></h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                  ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur
+                  Ut enim ad minim veniam</p>
+          </div> -->
+          <div class="tag-area">
+
+              <h4 class="title mb-2"><b>ARTICLES TAGS</b></h4>
+              <ul class="tags">
+                  {% for tag in tags %}
+                  <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="javascript:void(0)">{{ tag }}</a></li>
+                  {% endfor %}
+              </ul>
+
+          </div><!-- subscribe-area -->
+
+      </div><!-- info-area -->
+
+  </div><!-- col-lg-4 col-md-12 -->
   </div>
 </div>
 <!-- footer-->
-{% include "includes/blog_footer.html" %}
+<!-- {% include "includes/blog_footer.html" %} -->
 
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/css/swiper.min.css"> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/js/swiper.min.js"></script>
