--- a/templates/account_base.html
+++ b/templates/account_base.html
@@ -29,7 +29,89 @@
 
   <div class="main-content">
 
-    {% include "includes/navigation-fullscreen.html" %}
+    <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
+      <div class="container">
+        <a class="navbar-brand text-white" href="{% url 'blog:home' %}">
+          <span>
+          Study Better Way
+    
+          </span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse navbar-custom-collapse collapse" id="navbar-collapse">
+          <div class="navbar-collapse-header">
+            <div class="row">
+              <div class="col-6 collapse-brand">
+                <a href="{% url 'blog:home' %}">
+                 Study Better Way
+                </a>
+              </div>
+              <div class="col-6 collapse-close">
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+                  <span></span>
+                  <span></span>
+                </button>
+              </div>
+            </div>
+          </div>
+          <ul class="navbar-nav mr-auto">
+            {% if request.user.is_authenticated %}
+            <li class="nav-item">
+              
+           
+                
+              <a href="{% url 'authentication:logout' %}" class="nav-link">
+                <span class="nav-link-inner--text">Logout</span>
+              </a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              
+           
+                
+              <a href="{% url 'authentication:login' %}" class="nav-link">
+                <span class="nav-link-inner--text">Login</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'authentication:register' %}" class="nav-link">
+                <span class="nav-link-inner--text">Register</span>
+              </a>
+            </li>
+            {% endif %}
+           
+          </ul>
+          <hr class="d-lg-none" />
+          <!-- <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+            <li class="nav-item">
+              <a class="nav-link nav-link-icon" href="#" 
+                 target="_blank" data-toggle="tooltip" data-original-title="Like us on Facebook">
+                <i class="fab fa-facebook-square"></i>
+                <span class="nav-link-inner--text d-lg-none">Facebook</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-link-icon" href="" 
+                 target="_blank" data-toggle="tooltip" data-original-title="Follow us on Twitter">
+                <i class="fab fa-twitter-square"></i>
+                <span class="nav-link-inner--text d-lg-none">Twitter</span>
+              </a>
+            </li>
+            <li class="nav-item d-none d-lg-block ml-lg-4">
+              <a href="#" 
+                 target="_blank" class="btn btn-neutral btn-icon">
+                <span class="btn-inner--icon">
+                  <i class="fas fa-rocket mr-2"></i>
+                </span>
+                <span class="nav-link-inner--text"></span>
+              </a>
+            </li>
+          </ul> -->
+        </div>
+      </div>
+    </nav>
 
     <!-- Header -->
     <div class="header bg-gradient-primary">
