--- a/templates/includes/blog_footer.html
+++ b/templates/includes/blog_footer.html
@@ -4,14 +4,18 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="content">
-                    <form>
+                    <form method="POST" action="{% url 'authentication:user_subscription' %}">
+
+                        {% csrf_token %}
                         <h5 class="mt-4">SUBSCRIBE TO OUR NEWSLETTER</h5><hr>
                         <div class="input-group">
-                            <input type="email" class="form-control" placeholder="Enter your email">
+                            <input type="email" name="email" class="form-control" placeholder="Enter your email" required>
                             <span class="input-group-btn">
                                 <button class="btn" type="submit">Subscribe Now</button>
                             </span>
                         </div>
+                        
+                        {% include "includes/messages.html" %}
                     </form>
                 </div>
             </div>
