--- a/apps/authentication/templates/authentication/account_activation_invalid.html
+++ b/apps/authentication/templates/authentication/account_activation_invalid.html
@@ -18,8 +18,8 @@
                         </div>
                     <hr />
                     <div class="text-center font-weight-bold">
-                      <a class="small text-info" href="{% url 'blog:home' %}">
-                          Home
+                      <a class="small  btn btn-primary" href="{% url 'blog:home' %}">
+                        <i class="fas fa-home"></i> Go Back Home
                       </a>
                     </div>
                 </div>
