--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -76,7 +76,7 @@ Home
         </div>
         <div class="card-body">
           <div class="content">
-            <section class="blog-list px-3 py-5 p-md-5">
+            <section class="blog-list px-3">
               {% if articles %}
               <div class="container">
                 {% for article in articles %}
@@ -263,6 +263,38 @@ Home
 .swiper-button-prev, .swiper-button-next{
   top:30%;
 }
+
+/*For pagination round design*/
+.page-item.active .page-link {
+  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08); }
+
+.page-item .page-link,
+.page-item span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0 3px;
+  border-radius: 50% !important;
+  width: 40px;
+  height: 36px;
+  font-size: 0.875rem; }
+
+
+
+.pagination {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0.375rem; }
+
+
+.page-item.active .page-link {
+  z-index: 3;
+  color: #fff;
+  background-color: #5e72e4;
+  border-color: #5e72e4; }
+
 
 </style>
 
