--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -178,7 +178,7 @@
            
                 <form>
                   <div class="input-group search-box">
-                    <input type="text" id="search" class="form-control" placeholder="Search here...">
+                    <input type="text" id="myInput" class="form-control" placeholder="Search here...">
                     <div class="input-group-append">
                       <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
                     </div>
