Change username to email while login

--- a/apps/authentication/templates/authentication/login.html
+++ b/apps/authentication/templates/authentication/login.html
@@ -29,13 +29,13 @@
                 {% csrf_token %}
 
                 <div class="form-group mb-3">
-                  <label for="username">Username/Email*</label>
+                  <label for="username">Email*</label>
 
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                     </div>
-                    {{ form.username }}
+                    {{ form.email }}
                   </div>
                 </div>
                 <div class="form-group">
