check already exists email for subscription account

--- a/apps/authentication/templates/authentication/subscription_success.html
+++ b/apps/authentication/templates/authentication/subscription_success.html
@@ -15,7 +15,7 @@
                 <div class="card-body">
                         <div class="alert alert-success font-weight-bold text-dark text-center">
 
-                            Thank you for your subscriptions.
+                            Thank you.Your subscription account was activated successfully.
                             <br >
                            You will receives all the notification via this email for any updated.
                         </div>
