--- a/apps/authentication/templates/authentication/account_activation_sent.html
+++ b/apps/authentication/templates/authentication/account_activation_sent.html
@@ -13,10 +13,10 @@
                 <h4 class="card-header">Account Activation Sent</h4>
 
                 <div class="card-body">
-                        <div class="alert alert-success font-weight-bold text-dark text-center">
+                        <div class="font-weight-bold text-dark text-center">
 
-                            Please confirm your email address to complete the registration.
-                            <br >
+                            Please confirm your email address.
+                            <br ><br>
                             We have sent you an email to confirm your email address.
                             Please check your inbox and spam folder.
                         </div>
