--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -6,8 +6,6 @@ Home
 {% block stylesheet %}
 {{ block.super }}
 
-<!-- <link rel="stylesheet" href="/static/assets/scss/core/pagination/_pagination.scss" type="text/scss"> -->
-  <!-- Argon CSS -->
   <!-- <link rel="stylesheet" href="/static/assets/css/argon.css?v=1.2.0" type="text/css"> -->
 <link rel="stylesheet" href="/static/assets/css/blog/front-page-category/styles.css" type="text/css">
 
@@ -304,7 +302,7 @@ Home
 {% block javascripts %}
 
 <script>
-  
+    
   var swiper = new Swiper('.swiper-container', {
 
    direction: 'horizontal',
@@ -345,45 +343,13 @@ Home
               $(this).closest('.card').toggle(isFound);
           });
       });
-      $("#id_email").keyup(function(){
-        var email=$(this).val();
-
-       if(email!=""){
-            $.ajax({
-                url:"{% url 'home:check_email_exist' %}",
-                type:'POST',
-                data:{email:email},
-                success: function(response){
-                  console.log(response)
-                  var filter = /^([a-zA-Z0-9_\.\-\+])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-                    if(response=="True"){
-                        $(".email_error").remove();
-                        $("<span class='email_error' style='padding: 5px;margin-top:3rem;color: red;font-weight: bold;'>Email already exists.Use another.</span>").insertAfter("#id_email");
-                    }
-                    else if(filter.test(email)){//for email 
-                      $(".email_error").remove();
-                      $("<span class='email_error' style='padding: 5px;margin-top:3rem;color: green;font-weight: bold;'></span>").insertAfter("#id_email");
-                  }
-                   
-                   
-                }
-                ,
-                error: function(){
-                  console.log("failed")
-                }
-             
-            })
-           
-        }
-        else{
-          $(".email_error").remove();
-        }
-
-    });
+      
 
   });
+  
 </script>
 
+<script src="{% static 'blog/js/scripts.js' %}"></script>
 
 {% endblock javascripts %}
 
