Updated tags for filter articles

--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -100,7 +100,7 @@ Home
                          <!-- <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="{% url 'blog:tag_articles' tag_name=tag.name %}">{{ tag.name }}</a></li> -->
                         {% endfor %}
                       </ul>
-                      <a class="more-link" href="{{ article.get_absolute_url }}">View details &rarr;</a>
+                      <a class="more-link " href="{{ article.get_absolute_url }}"><i class = "fas fa-1x fa-eye"></i> View article </a>
                       <hr class="solid"><!-- Solid divider -->
                     </div>
                     <!--//media-body-->
@@ -170,25 +170,7 @@ Home
 
       <div class="single-post info-area bg-white">
 
-         
-
-          <div class="subscribe-area">
-            <br>
-
-              <h4 class="title"><b>SUBSCRIBE NOW</b></h4>
-              <br>
-           
-                  <form method="POST" action="{% url 'authentication:user_subscription' %}">
-                      {% csrf_token %}
-                      <div class="input-area">
-                      <input class="email-input" name="email" id = "id_email" type="email" placeholder="Enter your email" required>
-                       </div>
-
-                      <button class="btn  px-3 mt-4 text-white" style="background-color: #5E72E4;" type="submit">SUBSCRIBE</button>
-                      <span class="text-secondary mt-2"><i class = "fas fa-lock"></i> No spam. Unsubscribe any time. </span>
-                  </form>
-
-          </div><!-- subscribe-area -->
+        {% include "includes/sidebar_email_subscription.html" %}
           <!-- <div class="about-area">
               <h4 class="title"><b>ABOUT ME</b></h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
