--- a/templates/includes/blog_footer.html
+++ b/templates/includes/blog_footer.html
@@ -75,7 +75,7 @@
                       }
                       else if(filter.test(email)){//for email 
                         $(".email_error").remove();
-                        $("<span class='email_error' style='padding: 5px;margin-top:3rem;color: green;font-weight: bold;'></span>").insertAfter("#id_email");
+                        $("<span class='email_error' style='padding: 5px;margin-top:3rem;color: green;font-weight: bold;'></span>").insertAfter("#email_msg");
                     }
                      
                      
