--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -176,9 +176,9 @@
         <div class="navbar-nav ml-auto">
           <div class="nav-item dropdown search-dropdown">
            
-                <form>
+                <form method="GET" action="{% url 'blog:article_search_list_view' %}">
                   <div class="input-group search-box">
-                    <input type="text" id="myInput" class="form-control" placeholder="Search here...">
+                    <input type="text" name="query" class="form-control" placeholder="Search here...">
                     <div class="input-group-append">
                       <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
                     </div>
