float back to top created

--- a/templates/blog_base.html
+++ b/templates/blog_base.html
@@ -56,15 +56,43 @@
 
   </div>
 
+
   <!-- {% include "includes/scripts.html" %} -->
 
   <!-- Specific JS goes HERE --> 
   {% block javascripts %}
 
-
   {% endblock javascripts %}
 
+<style>
 
+  
+  .back-to-top {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      display: none;
+  }
+  
+</style>
+<script>
+  $(document).ready(function(){
+    $(window).scroll(function () {
+        if ($(this).scrollTop() > 50) {
+          $('#back-to-top').fadeIn();
+        } else {
+          $('#back-to-top').fadeOut();
+        }
+      });
+      // scroll body to 0px on click
+      $('#back-to-top').click(function () {
+        $('body,html').animate({
+          scrollTop: 0
+        }, 400);
+        return false;
+      });
+  });
+</script>
 </body>
 
 </html>
