--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -147,7 +147,7 @@
 
 
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top ">
       <div class="title">
         <a href="{% url 'blog:home' %}" class="text-white navbar-brand"><b>Study Better Way</b></a>
 
