--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -6,7 +6,7 @@ Home
 {% block stylesheet %}
 {{ block.super }}
 
-  <!-- <link rel="stylesheet" href="/static/assets/css/argon.css?v=1.2.0" type="text/css"> -->
+<!-- <link rel="stylesheet" href="/static/assets/css/argon.css?v=1.2.0" type="text/css"> -->
 <link rel="stylesheet" href="/static/assets/css/blog/front-page-category/styles.css" type="text/css">
 
 <link rel="stylesheet" href="/static/assets/css/blog/front-page-category/responsive.css" type="text/css">
@@ -18,46 +18,44 @@ Home
 
 {% if categories %}
 
-  <div class="main-slider">
-    <div id="swiper1" class="swiper-container position-static" data-slide-effect="slide" data-autoheight="false"
+<div class="main-slider">
+  <div id="swiper1" class="swiper-container position-static" data-slide-effect="slide" data-autoheight="false"
     data-swiper-speed="500" data-swiper-autoplay="10000" data-swiper-margin="0" data-swiper-slides-per-view="4"
     data-swiper-breakpoints="true" data-swiper-loop="true" style="width: 300.25px;">
-      <div class="swiper-wrapper">
+    <div class="swiper-wrapper">
 
-        {% for category in categories %}
+      {% for category in categories %}
 
 
-        <div class="swiper-slide">
-          <a class="slider-category" href="{{ category.get_absolute_url }}">
-            <div class="blog-image">
-              <img src="{{ category.image.url }}" class="category-image" alt="Blog Image" 
-              width="352" height="235"
-               >
+      <div class="swiper-slide">
+        <a class="slider-category" href="{{ category.get_absolute_url }}">
+          <div class="blog-image">
+            <img src="{{ category.image.url }}" class="category-image" alt="Blog Image" width="352" height="235">
 
-            </div>
+          </div>
 
-            <div class="category">
-              <div class="display-table center-text">
-                <div class="display-table-cell">
-                  <h3><b>{{ category.name }}</b></h3>
-                </div>
+          <div class="category">
+            <div class="display-table center-text">
+              <div class="display-table-cell">
+                <h3><b>{{ category.name }}</b></h3>
               </div>
             </div>
-          </a>
-        </div><!-- swiper-slide -->
+          </div>
+        </a>
+      </div><!-- swiper-slide -->
 
-        {% endfor %}
+      {% endfor %}
 
-      </div><!-- swiper-wrapper -->
-          <!-- pagination -->
-          <div class="swiper-pagination"></div>
-    </div><!-- swiper-container -->
+    </div><!-- swiper-wrapper -->
+    <!-- pagination -->
+    <div class="swiper-pagination"></div>
+  </div><!-- swiper-container -->
 
-  
-  </div><!-- slider -->
-      <!-- prev next button -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+
+</div><!-- slider -->
+<!-- prev next button -->
+<div class="swiper-button-prev"></div>
+<div class="swiper-button-next"></div>
 
 {% else %}
 <center>
@@ -66,7 +64,7 @@ Home
 {% endif %}
 
 <div class="container mb-3">
-  <div class="row" id="filter_div">
+  <div class="row">
     <div class="col-md-8">
       <div class="card shadow-sm bg-white">
         <!-- <div class="card-header">
@@ -95,12 +93,14 @@ Home
                       </div>
                       <ul class="tags my-2">
                         {% for tag in article.tags.all %}
-                        <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="javascript:void()">{{ tag.name }}</a></li>
+                        <li><a class="badge text-uppercase text-white" style="background-color: #5E72E4;"
+                            href="javascript:void()">{{ tag.name }}</a></li>
 
-                         <!-- <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="{% url 'blog:tag_articles' tag_name=tag.name %}">{{ tag.name }}</a></li> -->
+                        <!-- <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="{% url 'blog:tag_articles' tag_name=tag.name %}">{{ tag.name }}</a></li> -->
                         {% endfor %}
                       </ul>
-                      <a class="more-link " href="{{ article.get_absolute_url }}"><i class = "fas fa-1x fa-eye"></i> View article </a>
+                      <a class="more-link " href="{{ article.get_absolute_url }}"><i class="fas fa-1x fa-eye"></i> View
+                        article </a>
                       <hr class="solid"><!-- Solid divider -->
                     </div>
                     <!--//media-body-->
@@ -127,8 +127,7 @@ Home
               <ul class="pagination justify-content-center">
                 {% if articles.has_previous %}
                 <li class="page-item">
-                  <a class="page-link" href="?page={{ articles.previous_page_number }}"
-                    tabindex="-1">Prev</a>
+                  <a class="page-link" href="?page={{ articles.previous_page_number }}" tabindex="-1">Prev</a>
                 </li>
                 {% else %}
                 <li class="page-item disabled">
@@ -171,27 +170,29 @@ Home
       <div class="single-post info-area bg-white">
 
         {% include "includes/sidebar_email_subscription.html" %}
-          <!-- <div class="about-area">
+        <!-- <div class="about-area">
               <h4 class="title"><b>ABOUT ME</b></h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                   ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur
                   Ut enim ad minim veniam</p>
           </div> -->
-          <div class="tag-area">
+        <div class="tag-area">
 
-              <h4 class="title mb-2"><b>ARTICLES TAGS</b></h4>
-              <ul class="tags">
-                  {% for tag in tags %}
-                  <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="javascript:void(0)">{{ tag }}</a></li>
-                  {% endfor %}
-              </ul>
+          <h4 class="title mb-2"><b>ARTICLES TAGS</b></h4>
+          <ul class="tags">
+            {% for tag in tags %}
+            <li><a class="badge text-uppercase text-white" style="background-color: #5E72E4;"
+                href="javascript:void(0)">{{ tag }}</a></li>
+            {% endfor %}
+          </ul>
 
-          </div><!-- subscribe-area -->
+        </div><!-- subscribe-area -->
 
       </div><!-- info-area -->
 
-  </div><!-- col-lg-4 col-md-12 -->
+    </div><!-- col-lg-4 col-md-12 -->
   </div>
+  <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
 </div>
 <!-- footer-->
 <!-- {% include "includes/blog_footer.html" %} -->
@@ -201,82 +202,94 @@ Home
 <!-- pagination -->
 
 <style>
-  
+  .swiper-container {
+    margin-top: 4rem;
+  }
+
   .main-slider {
     position: relative;
- }
- @media (min-width: 37.5em) {
-    .main-slider  {
-       margin-left: auto;
-       margin-right: auto;
-       width: 92%;
-       /* make room for arrows */
-       padding-left: 2em;
-       padding-right: 2em;
+  }
+
+  @media (min-width: 37.5em) {
+    .main-slider {
+      margin-left: auto;
+      margin-right: auto;
+      width: 92%;
+      /* make room for arrows */
+      padding-left: 2em;
+      padding-right: 2em;
     }
- }
- @media (min-width: 43.75em) {
-    .main-slider  {
-       width: 95%;
+  }
+
+  @media (min-width: 43.75em) {
+    .main-slider {
+      width: 95%;
     }
- }
- .swiper-wrapper {
-  /* now pagination is below slides */
-  margin-bottom: 3em;
-  /* just enough width so slides handing off screen are partially 
-  visible */
-  width: 73.8%;
-}
-@media (min-width: 37.5em) {
+  }
+
   .swiper-wrapper {
-     width: 100%;
+    /* now pagination is below slides */
+    margin-bottom: 3em;
+    /* just enough width so slides handing off screen are partially 
+  visible */
+    width: 73.8%;
   }
-}
-@media (min-width: 37.5em) {
-  .swiper-slide.swiper-slide  {
-     /* going for a 2 column layout here */
-     width: 100%;
-     /* centeredSlides set to true */
-     /* reposition so first slide appears on left */
-     transform: translateX(-50%);
+
+  @media (min-width: 37.5em) {
+    .swiper-wrapper {
+      width: 100%;
+    }
   }
-}
-.swiper-button-prev, .swiper-button-next{
-  top:30%;
-}
 
-/*For pagination round design*/
-.page-item.active .page-link {
-  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08); }
+  @media (min-width: 37.5em) {
+    .swiper-slide.swiper-slide {
+      /* going for a 2 column layout here */
+      width: 100%;
+      /* centeredSlides set to true */
+      /* reposition so first slide appears on left */
+      transform: translateX(-50%);
+    }
+  }
 
-.page-item .page-link,
-.page-item span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  margin: 0 3px;
-  border-radius: 50% !important;
-  width: 40px;
-  height: 36px;
-  font-size: 0.875rem; }
+  .swiper-button-prev,
+  .swiper-button-next {
+    top: 30%;
+  }
 
+  /*For pagination round design*/
+  .page-item.active .page-link {
+    box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+  }
 
-
-.pagination {
-  display: flex;
-  padding-left: 0;
-  list-style: none;
-  border-radius: 0.375rem; }
-
-
-.page-item.active .page-link {
-  z-index: 3;
-  color: #fff;
-  background-color: #5e72e4;
-  border-color: #5e72e4; }
+  .page-item .page-link,
+  .page-item span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0 3px;
+    border-radius: 50% !important;
+    width: 40px;
+    height: 36px;
+    font-size: 0.875rem;
+  }
 
 
+
+  .pagination {
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    border-radius: 0.375rem;
+  }
+
+
+  .page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+    background-color: #5e72e4;
+    border-color: #5e72e4;
+  }
 </style>
 
 
@@ -284,26 +297,27 @@ Home
 {% block javascripts %}
 
 <script>
-    
+
   var swiper = new Swiper('.swiper-container', {
 
-   direction: 'horizontal',
-   spaceBetween: 1,
-   loop: true,
-   slidesPerView: 'auto', 
+    direction: 'horizontal',
+    spaceBetween: 1,
+    loop: true,
+    slidesPerView: 'auto',
 
-   centeredSlides: true,
-   freeMode: false,
-   pagination: {
-     el: '.swiper-pagination',
-     
-     clickable: true,
-   },
-     navigation: {
-       nextEl: '.swiper-button-next',
-       prevEl: '.swiper-button-prev',
-     },
-   });
+    centeredSlides: true,
+    freeMode: false,
+    pagination: {
+      el: '.swiper-pagination',
+
+      clickable: true,
+    },
+    navigation: {
+      nextEl: '.swiper-button-next',
+      prevEl: '.swiper-button-prev',
+    },
+  });
+
 </script>
 
 
@@ -311,27 +325,26 @@ Home
 
 <script>
 
-  
+
   $(document).ready(function () {
 
 
-      $("#myInput").on("keyup", function () {
-          var value = $(this).val().toLowerCase();
-          let isFound = false;
-          $("#filter_div *").filter(function () {
-              if ($(this).find('.card-body .content .blog-list .container .item').text().toLowerCase().includes(value)) {
-                  isFound = true;
-              }
-              $(this).closest('.card').toggle(isFound);
-          });
+    $("#myInput").on("keyup", function () {
+      var value = $(this).val().toLowerCase();
+      let isFound = false;
+      $("#filter_div *").filter(function () {
+        if ($(this).find('.card-body .content .blog-list .container .item').text().toLowerCase().includes(value)) {
+          isFound = true;
+        }
+        $(this).closest('.card').toggle(isFound);
       });
-      
+    });
+
 
   });
-  
+
 </script>
 
 <script src="{% static 'blog/js/scripts.js' %}"></script>
 
 {% endblock javascripts %}
-
