--- a/apps/blog/templates/blog/article/home.html
+++ b/apps/blog/templates/blog/article/home.html
@@ -192,7 +192,7 @@ Home
 
     </div><!-- col-lg-4 col-md-12 -->
   </div>
-  <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
+  <a id="back-to-top" href="#" class="btn  btn-lg text-white back-to-top" style="background-color: #5E72E4;" role="button"><i class="fas fa-chevron-up"></i></a>
 </div>
 <!-- footer-->
 <!-- {% include "includes/blog_footer.html" %} -->
@@ -203,7 +203,7 @@ Home
 
 <style>
   .swiper-container {
-    margin-top: 4rem;
+    margin-top: 5rem;
   }
 
   .main-slider {
@@ -253,7 +253,7 @@ Home
 
   .swiper-button-prev,
   .swiper-button-next {
-    top: 30%;
+    top: 33%;
   }
 
   /*For pagination round design*/
