--- a/apps/blog/templates/blog/article/article_search_list.html
+++ b/apps/blog/templates/blog/article/article_search_list.html
@@ -1,139 +1,44 @@
-{% extends 'blog_base.html' %}
-
-{% block title %}
- Search Results
-{% endblock title %}
-
-{% block messages %}
-{% endblock messages %}
-
-{% block content %}
-    {% if categories %}
-    <div class="main-slider">
-		<div class="swiper-container position-static" data-slide-effect="slide" data-autoheight="false"
-			data-swiper-speed="500" data-swiper-autoplay="5000" data-swiper-margin="0" data-swiper-slides-per-view="4"
-			data-swiper-breakpoints="true" data-swiper-loop="true" >
-			<div class="swiper-wrapper">
-                {% for category in categories %}
-				<div class="swiper-slide">
-					<a class="slider-category" href="{{ category.get_absolute_url }}">
-						<div class="category-image">
-                            <img src="{{ category.image.url }}"
-                                 class="category-image"
-                                 width="352" height="235"
-                                 alt="Blog Image">
-                        </div>
-
-						<div class="category">
-							<div class="display-table center-text">
-								<div class="display-table-cell">
-									<h3><b>{{ category.name }}</b></h3>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div><!-- swiper-slide -->
-                {% endfor %}
-
-			</div><!-- swiper-wrapper -->
-		</div><!-- swiper-container -->
-
-	</div><!-- slider -->
-    {% else %}
-        <center><div class="alert alert-warning"><b>No Categories</b></div></center>
-    {% endif %}
-
-	<section class="blog-area section">
-		<div class="container">
-            <!-- Messages -->
-           <div class="row">
-            <div class="col-md-12">
-                {% if messages %}
-                    {% for message in messages %}
-                      <div class="text-center font-weight-bold alert
-                           {% if message.level_tag == 'error' %}
-                           alert-danger
-                           {% else %}
-                           alert-{{ message.tags }}
-                           {% endif %}">
-
-                        {{ message }}
-                      </div>
-                    {% endfor %}
-              {% endif %}
-            </div>
-          </div>
+{% if search_articles %}
+<div class="container">
+  {% for article in search_articles %}
+  <div class="item mb-5">
+    <div class="media">
+      <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="{{ article.image.url }}" alt="image">
+      <div class="media-body">
+        <h3 class="title mb-1"><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></h3>
+        <div class="meta mb-1"><span class="date"><b>Published:</b> <i>{{ article.date_published|date:'M d, Y'}}</i></span>
+          <span class="time">{{ article.count_words }} word{{ article.count_words|pluralize }}</span>
+          <span class="time">{{ article.read_time }} min{{ article.read_time|pluralize }} read</span>
+          <span class="comment">{{ article.views }} view{{ article.views|pluralize }}</span>
+          <!-- <span class="comment"><a href="#">{{ article.comments.count }} comment{{article.comments.count|pluralize }}</a></span> -->
+          <span class="time">
 
 
-            <!-- Results -->
-            {% if search_results %}
-			<div class="row">
-                {% for article in search_results %}
-				<div class="col-lg-4 col-md-6">
-					<div class="card h-100">
-						<div class="single-post post-style-1">
+          </span>
+        </div>
+        <ul class="tags my-2">
+          {% for tag in article.tags.all %}
+          <li><a class="badge text-uppercase text-white" style="background-color: #5E72E4;"
+              href="javascript:void()">{{ tag.name }}</a></li>
 
-							<div class="blog-image">
-                                <img src="{{ article.image.url }}"
-                                     width="330" height="220"
-                                     alt="Blog Image"
-                                >
-                            </div>
+          <!-- <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="{% url 'blog:tag_articles' tag_name=tag.name %}">{{ tag.name }}</a></li> -->
+          {% endfor %}
+        </ul>
+        <a class="more-link " href="{{ article.get_absolute_url }}"><i class="fas fa-1x fa-eye"></i> View
+          article </a>
+        <hr class="solid"><!-- Solid divider -->
+      </div>
+      <!--//media-body-->
+    </div>
+    <!--//media-->
+  </div>
+  <!--//item-->
+  <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
 
-							<a class="avatar" href="{% url 'blog:author_articles' article.author.username %}">
-                                <img src="{{ article.author.profile.image.url }}" alt="Profile Image"
-                                     class="profile-image">
-                            </a>
+  </div>
+  {% endfor %}
+</div>
 
-							<div class="blog-info">
 
-								<h4 class="title"><a href="{{ article.get_absolute_url }}"><b>{{ article.title }}</b></a></h4>
-
-								<ul class="post-footer">
-									<li><a><i class="ion-ios-clock"></i>{{ article.read_time }} min{{ article.read_time|pluralize }} read</a></li>
-									<li><i class="ion-chatbubbles"></i>{{ article.comments.count }}</li>
-									<li><i class="ion-eye"></i>{{ article.views }}</li>
-								</ul>
-
-							</div><!-- article-info -->
-						</div><!-- single-post -->
-					</div><!-- card -->
-				</div><!-- col-lg-4 col-md-6 -->
-                {% endfor %}
-			</div><!-- row -->
-            {% endif %}
-                {# Pagination for article post #}
-            {% if is_paginated %}
-
-                {# Displays previous pages #}
-                {% if page_obj.has_previous %}
-                    <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-                    <a class="btn btn-outline-info mb-4"
-                       href="?page={{ page_obj.previous_page_number }}">Previous
-                    </a>
-                {% endif %}
-
-                {# Displays current page #}
-                {% for num in page_obj.paginator.page_range %}
-                    {% if page_obj.number == num %}
-                        <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-                    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                        <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
-                    {% endif %}
-                 {% endfor %}
-
-                {# Displays next pages #}
-               {% if page_obj.has_next %}
-                    <a class="btn btn-outline-info mb-4"
-                       href="?page={{ page_obj.next_page_number }}">Next
-                    </a>
-                    <a class="btn btn-outline-info mb-4"
-                       href="?page={{ page_obj.paginator.num_pages }}">Last
-                    </a>
-                {% endif %}
-
-            {% endif %}
-
-		</div><!-- container -->
-	</section><!-- section -->
-{% endblock content %}
+{% endif %}
