--- a/templates/author_base.html
+++ b/templates/author_base.html
@@ -1,6 +1,7 @@
 
 
 {% load static %}
+{% load compress %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,6 +19,8 @@
   <link rel="icon" href="/static/assets/img/brand/favicon.png" type="image/png">
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
+
+  {% compress css %}
   <!-- Icons -->
   <link rel="stylesheet" href="/static/assets/vendor/nucleo/css/nucleo.css" type="text/css">
   <link rel="stylesheet" href="/static/assets/css/blog/responsive.css" type="text/css">
@@ -26,20 +29,24 @@
   <!-- Page plugins -->
   <!-- Argon CSS -->
   <link rel="stylesheet" href="/static/assets/css/argon.css?v=1.2.0" type="text/css">
-<!-- From bona design -->
+  {% endcompress %}
+
+
+<!-- From bona design
 
 <link rel="stylesheet" href="{% static 'dashboard/author/plugins/fontawesome-free/css/all.min.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard/author/plugins/icon-kit/dist/css/iconkit.min.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard/author/plugins/ionicons/dist/css/ionicons.min.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard/author/plugins/perfect-scrollbar/css/perfect-scrollbar.css' %}">
-<link rel="stylesheet"
-      href="{% static 'dashboard/author/plugins/tempusdominus-bootstrap-4/build/css/tempusdominus-bootstrap-4.min.css' %}">
+<link rel="stylesheet" href="{% static 'dashboard/author/plugins/tempusdominus-bootstrap-4/build/css/tempusdominus-bootstrap-4.min.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard/author/plugins/c3/c3.min.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard/author/dist/css/theme.min.css' %}">
-<script src="{% static 'dashboard/author/src/js/vendor/modernizr-2.8.3.min.js' %}"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 <link href="{% static 'dashboard/author/css/bootstrap-tagsinput.css' %}" rel="stylesheet" />
-<link rel="stylesheet" href="{% static 'dashboard/author/css/prism.css' %}">
+<link rel="stylesheet" href="{% static 'dashboard/author/css/prism.css' %}"> -->
+
+
+
   <!-- Specific CSS goes HERE -->
   {% block stylesheets %}{% endblock stylesheets %}
 
@@ -62,8 +69,12 @@
   <!-- Specific JS goes HERE --> 
   {% block javascripts %}{% endblock javascripts %}
 
+
+  {% compress js %}
+<script src="{% static 'dashboard/author/src/js/vendor/modernizr-2.8.3.min.js' %}"></script>
   <script src="/static/assets/js/argon.js?v=1.2.0"></script>
 
+  {% endcompress %}
 </body>
 
 </html>
