--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -182,7 +182,7 @@
            
                 <form method="GET" action="{% url 'blog:article_search_list_view' %}">
                   <div class="input-group search-box">
-                    <input type="text" name="search" class="form-control" placeholder="Search here...">
+                    <input type="text" name="q" class="form-control" placeholder="Search here...">
                     <div class="input-group-append">
                       <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
                     </div>
